--- a/backend/web/css/site.css
+++ b/backend/web/css/site.css
@@ -144,3 +144,13 @@ a.desc:after {
     outline: none;
 }
 
+
+.form-control-plaintext {
+    padding-top: .375rem;
+    padding-bottom: .375rem;
+    margin-bottom: 0;
+    line-height: 1.5;
+    background-color: transparent;
+    border: solid transparent;
+    border-width: 1px 0;
+}
