--- a/backend/web/css/site.css
+++ b/backend/web/css/site.css
@@ -42,6 +42,13 @@ body {
 }
 
 
+span.logo-mini {
+    background-image: url(../img/trident_white.png);
+    background-repeat: no-repeat;
+    margin-top: 10px;
+    margin-left: -7px !important;
+}
+
 .jumbotron {
     text-align: center;
     background-color: transparent;
